fix(footer): Ensure full height on ios

--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -32,6 +32,7 @@
 
   &--fullscreen {
     height: 100vh;
+    min-height: -webkit-fill-available;
     padding: 0 !important;
   }
 
